2022-04-24  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_CHECK_FUNCS): Add mremap.

2021-03-20  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Remove -m64 on 32bit target comments for
	utrace_BIARCH check.

2021-03-14  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Use AS_HELP_STRING instead of AC_HELP_STRING.

2021-03-11  Mark Wielaard  <mark@klomp.org>

	* NEWS: Document new --relative option for addr2line.

2022-03-10  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Move AC_PROG_CXX earlier. Check for both
	-D_FORTIFY_SOURCE=3 and -D_FORTIFY_SOURCE=2 support. Also
	set CXXFLAGS. Output final CFLAGS and CXXFLAGS setting.

2021-12-04  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Add --enable-sanitize-address.

2021-11-10  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_INIT): Set version to 0.186.
	* NEWS: Add translation item.

2021-09-03  John Mellor-Crummey <johnmc@rice.edu>

	* NEWS: Read inlining info in NVIDIA extended line map

2021-08-10  Adrian Ratiu  <adrian.ratiu@collabora.com>

	* configure.ac (AC_CACHE_CHECK): Rework std=gnu99 check to allow clang.

2021-08-20  Saleem Abdulrasool  <abdulras@google.com>

	* Add AC_CHECK_HEADERS for error.h and err.h.

2021-07-28  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_CHECK_DECLS): Add reallocarray check.

2021-05-22  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_INIT): Set version to 0.185.
	* NEWS: Add 0.185 entries.

2021-05-10  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_INIT): Set version to 0.184.
	* NEWS: Add libdw, translation and debuginfod-client entries.

2021-03-30  Frank Ch. Eigler  <fche@redhat.com>

	* configure.ac: Look for pthread_setname_np.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* configure.ac: Add -Wno-packed-not-aligned check.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* configure.ac: Add -Wtrampolines check.

2021-02-05  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_INIT): Set version to 0.183.