@@ -1,0 +1,25 @@
+# help out git with erroneous or incomplete email address mappings
+
+Piotr Drąg <raven@fedoraproject.org>
+Domingo Becker <beckerde@fedoraproject.org>
+Ulrich Drepper <drepper@x201.akkadia.org>
+Ulrich Drepper <drepper@redhat.com.roland>
+Hyu_gabaru Ryu_ichi <hyuuga@fedoraproject.org>
+kiyoto hashida  <khasida@fedoraproject.org>
+Claudio Rodrigo Pereyra Diaz <elsupergomez@fedoraproject.org>
+Gladys Guerrero <gguerrer@fedoraproject.org>
+Wei Liu <leahliu@fedoraproject.org>
+Michael Münch <micm@fedoraproject.org>
+Noah Sanci <nsanci@redhat.com>
+Noriko Mizumoto <noriko@fedoraproject.org>
+Cornelius Neckenig <tbull@fedoraproject.org>
+Francesco Tombolini <tombo@fedoraproject.org>
+Thomas Spura <tomspur@fedoraproject.org>
+Geert Warrink <warrink@fedoraproject.org>
+Yulia Poyarkova <ypoyarko@fedoraproject.org>
+Yuri Chornoivan <yurchor@fedoraproject.org>
+Ahelenia Ziemiańska <nabijaczleweli@nabijaczleweli.xyz>
+Daniel Cabrera <logan@fedoraproject.org>
+Thomas Canniot <mrtom@fedoraproject.org>
+Ahelenia Ziemiańska <nabijaczleweli@nabijaczleweli.xyz> наб via Elfutils-devel <elfutils-devel@sourceware.org>
+
