@@ -1,3 +1,8 @@
+2022-04-24  Frank Ch. Eigler  <fche@redhat.com>
+
+	* AUTHORS.sh, .mailmap: New files.
+	* AUTHORS: Regenerated to cover entire history of elfutils.
+
 2022-04-24  Mark Wielaard  <mark@klomp.org>
 
 	* configure.ac (AC_CHECK_FUNCS): Add mremap.
